[package]
name = "tower-sessions-fs-store"
description = "Filesystem store for the tower-sessions crate"
homepage = "https://github.com/hamster345/tower-sessions-fs-store"
repository = "https://github.com/hamster345/tower-sessions-fs-store"
readme = "README.md"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["axum", "sessions", "cookie", "tower", "filesystem"]
categories = ["asynchronous", "network-programming", "web-programming"]

[dependencies]
async-trait = "0.1.89"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["fs"] }
tower-sessions-core = "0.15.0"

[dev-dependencies]
axum = "0.8.6"
serde = "1.0.217"
tokio = { version = "1.47.1", features = ["full"] }
tower-sessions = "0.15.0"

[[example]]
name = "based_on_build_mode"
